methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: reassignment to val
def move(nbPas: Int,versLAvant: Boolean) {if (versLAvant) {while (nbPas!=0) {avance(); nbPas = nbPas - 1}}}
                                                                                             ^MethodsArgs:3: error: not found: value versLAvant
move(5,versLAvant) 
       ^